fix: fix dark scrollbar, fix port usage

--- a/src/assets/theme.dark.css
+++ b/src/assets/theme.dark.css
@@ -1,3 +1,7 @@
+html {
+  color-scheme: dark;
+}
+
 .markdown-body a {
   color: skyblue;
 }
